style: update horoscope.js, styles.css, and horoscope.json - Refactor navigation logic in horoscope.js to centralize update. - Add click event handlers for left and right horoscope sections. - Improve navigation with arrow buttons for horoscope transitions. - Optimize data fetching to avoid redundant requests. - Improve responsiveness in styles.css for various screen sizes. - Adjust image sizes and fix alignment issues in sections 2 and 3. - Modify horoscope.json to adjust data structure and update dates.

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,18 @@ header li {
 .arrow a:first-child {
     border-right: 1px solid #BFBFBF;
 }
-
+.arrow-left,
+.arrow-right{
+    background: none;
+    border: 1px solid #BFBFBF;
+    color: #BFBFBF;
+    font-size: 35px;
+    &:hover {
+        font-size: 45px;
+        color: #909090;
+    }
+    
+}
 main {
     width: calc(100vw - 317px);
     left: 300px;
